--- a/lpl/index.html
+++ b/lpl/index.html
@@ -7,9 +7,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>缩放</title>
     <style>
-        #box{width:100px;
-            height:100px;
-        background: red;}
+        #box{width:300px;
+            height:300px;
+        background: red;margin:150px auto;}
         html,body{width:100%;height:100%; overflow:hidden;}
     </style>
     <script>
